# notebook-tool

./: NOTEBOOK_TOOL_PROCESS_SUMMARY.md  README.md  pyproject.toml
.github/workflows/: pytest.yml
src/notebook_tool/: cli.py  compare.py
tests/: test_compare.py
tests/fixtures/: key_simple.ipynb  key_simple.notebook.json  student_simple_fail_first_cell.ipynb  student_simple_fail_first_cell.notebook.json  student_simple_pass.ipynb  student_simple_pass.notebook.json
